--- a/src/main/resources/cockroachdb-deploy/cockroachdb-statefulset.yaml
+++ b/src/main/resources/cockroachdb-deploy/cockroachdb-statefulset.yaml
@@ -3,9 +3,9 @@ kind: Service
 metadata:
   # This service is meant to be used by clients of the database. It exposes a ClusterIP that will
   # automatically load balance connections to the different database pods.
-  name: cockroachdb-public
+  name: ${cockroachdbcluster.name}-public
   labels:
-    app: cockroachdb
+    app: ${cockroachdbcluster.name}
 spec:
   ports:
   # The main port, served by gRPC, serves Postgres-flavor SQL, internode
@@ -18,7 +18,7 @@ spec:
     targetPort: 8080
     name: http
   selector:
-    app: cockroachdb
+    app: ${cockroachdbcluster.name}
 ---
 apiVersion: v1
 kind: Service
@@ -27,9 +27,9 @@ metadata:
   # set such that they can resolve each other's IP addresses. It does not
   # create a load-balanced ClusterIP and should not be used directly by clients
   # in most circumstances.
-  name: cockroachdb
+  name: ${cockroachdbcluster.name}
   labels:
-    app: cockroachdb
+    app: ${cockroachdbcluster.name}
   annotations:
     # Use this annotation in addition to the actual publishNotReadyAddresses
     # field below because the annotation will stop being respected soon but the
@@ -54,34 +54,34 @@ spec:
   publishNotReadyAddresses: true
   clusterIP: None
   selector:
-    app: cockroachdb
+    app: ${cockroachdbcluster.name}
 ---
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
-  name: cockroachdb-budget
+  name: ${cockroachdbcluster.name}-budget
   labels:
-    app: cockroachdb
+    app: ${cockroachdbcluster.name}
 spec:
   selector:
     matchLabels:
-      app: cockroachdb
+      app: ${cockroachdbcluster.name}
   maxUnavailable: 1
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: cockroachdb
+  name: ${cockroachdbcluster.name}
 spec:
-  serviceName: "cockroachdb"
-  replicas: 3
+  serviceName: "${cockroachdbcluster.name}"
+  replicas: 1
   selector:
     matchLabels:
-      app: cockroachdb
+      app: ${cockroachdbcluster.name}
   template:
     metadata:
       labels:
-        app: cockroachdb
+        app: ${cockroachdbcluster.name}
     spec:
       affinity:
         podAntiAffinity:
@@ -93,7 +93,7 @@ spec:
                 - key: app
                   operator: In
                   values:
-                  - cockroachdb
+                  - ${cockroachdbcluster.name}
               topologyKey: kubernetes.io/hostname
       containers:
       - name: cockroachdb
@@ -143,7 +143,7 @@ spec:
           - "-ecx"
           # The use of qualified `hostname -f` is crucial:
           # Other nodes aren't able to look up the unqualified hostname.
-          - "exec /cockroach/cockroach start --logtostderr --insecure --advertise-host $(hostname -f) --http-addr 0.0.0.0 --join cockroachdb-0.cockroachdb,cockroachdb-1.cockroachdb,cockroachdb-2.cockroachdb --cache 25% --max-sql-memory 25%"
+          - "exec /cockroach/cockroach start --logtostderr --insecure --advertise-host $(hostname -f) --http-addr 0.0.0.0 --join ${cockroachdbcluster.name}-0.${cockroachdbcluster.name},${cockroachdbcluster.name}-1.${cockroachdbcluster.name},${cockroachdbcluster.name}-2.${cockroachdbcluster.name} --cache 25% --max-sql-memory 25%"
       # No pre-stop hook is required, a SIGTERM plus some time is all that's
       # needed for graceful shutdown of a node.
       terminationGracePeriodSeconds: 60
@@ -162,4 +162,4 @@ spec:
         - "ReadWriteOnce"
       resources:
         requests:
-          storage: 100Gi
+          storage: ${cockroachdbcluster.storage}
