--- a/src/main/resources/cockroachdb-deploy/cockroachdb-cluster-init.yaml
+++ b/src/main/resources/cockroachdb-deploy/cockroachdb-cluster-init.yaml
@@ -4,6 +4,11 @@ metadata:
   name: ${cockroachdbcluster.name}-cluster-init
   labels:
     app: ${cockroachdbcluster.name}
+  ownerReferences:
+    - apiVersion: io.marlonpatrick/v1
+      kind: CockroachDBCluster
+      name: ${cockroachdbcluster.name}
+      uid: ${cockroachdbcluster.uid}
 spec:
   template:
     spec:
@@ -12,8 +17,19 @@ spec:
         image: cockroachdb/cockroach:v19.2.2
         imagePullPolicy: IfNotPresent
         command:
-          - "/cockroach/cockroach"
-          - "init"
-          - "--insecure"
-          - "--host=${cockroachdbcluster.name}-0.${cockroachdbcluster.name}"
+          - /bin/bash
+          - -c
+          - >-
+            while true; do
+            initOUT=$(set -x;
+            /cockroach/cockroach init
+            --insecure
+            --host=${cockroachdbcluster.name}-0.${cockroachdbcluster.name}
+            2>&1);
+            initRC="$?";
+            echo $initOUT;
+            [[ "$initRC" == "0" ]] && exit 0;
+            [[ "$initOUT" == *"cluster has already been initialized"* ]] && exit 0;
+            sleep 5;
+            done
       restartPolicy: OnFailure
