--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+# AWS file settings intended for dev purposes
+backupper-image/aws-dev-settings/
+
 # Created by https://www.gitignore.io/api/java,maven,eclipse
 # Edit at https://www.gitignore.io/?templates=java,maven,eclipse
 
