--- a/operator-deploy/operator.yaml
+++ b/operator-deploy/operator.yaml
@@ -41,7 +41,7 @@ rules:
   resources: ["statefulsets"]
   verbs: ["get", "list", "watch", "create", "update", "delete"]
 - apiGroups: ["batch", "extensions"]
-  resources: ["jobs"]
+  resources: ["jobs", "cronjobs"]
   verbs: ["get", "list", "watch", "create", "update", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
