Add app label in all resources created by the operator and in the operator objects itself

--- a/src/main/resources/cockroachdb-deploy/cockroachdb-backup.yaml
+++ b/src/main/resources/cockroachdb-deploy/cockroachdb-backup.yaml
@@ -14,8 +14,13 @@ spec:
   jobTemplate:
     metadata:
       name: ${cockroachdbcluster.name}-backupper
+      labels:
+        app: ${cockroachdbcluster.name}
     spec:
       template:
+        metadata:
+          labels:
+            app: ${cockroachdbcluster.name}
         spec:
           containers:
           - name: cockroachdb-backupper
