--- a/src/main/resources/cockroachdb-deploy/cockroachdb-cluster-init.yaml
+++ b/src/main/resources/cockroachdb-deploy/cockroachdb-cluster-init.yaml
@@ -11,6 +11,9 @@ metadata:
       uid: ${cockroachdbcluster.uid}
 spec:
   template:
+    metadata:
+      labels:
+        app: ${cockroachdbcluster.name}
     spec:
       containers:
       - name: cluster-init
