--- a/operator-deploy/operator.yaml
+++ b/operator-deploy/operator.yaml
@@ -2,17 +2,23 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: simple-cockroachdb-operator
+  labels: &default-labels
+    app.kubernetes.io/name: simple-cockroachdb-operator
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: simple-cockroachdb-operator
   namespace: simple-cockroachdb-operator
+  labels: &default-labels
+    app.kubernetes.io/name: simple-cockroachdb-operator
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: simple-cockroachdb-operator
+  labels: &default-labels
+    app.kubernetes.io/name: simple-cockroachdb-operator
 rules:
 # -------------------------------------------------------------------------
 # The custom resource definition (CRD) is created by the operator.
@@ -48,6 +54,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: simple-cockroachdb-operator
+  labels: &default-labels
+    app.kubernetes.io/name: simple-cockroachdb-operator
 roleRef:
   kind: ClusterRole
   name: simple-cockroachdb-operator
